Melhorias apontadas pelo sonarlint